syntax = "proto3";

package url;

option go_package = "github.com/fidesy/ozon-test/proto/url";


service URLService {
  rpc GetOriginalURL(GetOriginalURLRequest) returns (GetOriginalURLResponse) {}
  rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse) {}
}

message GetOriginalURLRequest {
  string hash = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
}

message CreateShortURLRequest {
  string original_url = 1;
}

message CreateShortURLResponse {
  string short_url = 1;
}
